--- a/index.html
+++ b/index.html
@@ -1,88 +1,186 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset='utf-8' />
+    <title>BFF Teams Locator</title>
+    <meta name='robots' content='noindex, nofollow'>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet'>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
+	<style>
+        body {
+    color:#404040;
+    font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+    margin:0;
+    padding:0;
+    -webkit-font-smoothing:antialiased;
+  }
 
-<head>
-    <title></title>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href='https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.min.css' rel='stylesheet'>
-    <script src='https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.js'></script>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
-    <script
-        src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
-    <link rel='stylesheet'
-        href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css'
-        type='text/css' />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/geojson/0.5.0/geojson.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-    <script src='https://npmcdn.com/csv2geojson@latest/csv2geojson.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel='stylesheet' href="style.css" />
+  * {
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+  }
+
+  .sidebar {
+    position:absolute;
+    width:33.3333%;
+    height:100%;
+    top:0;left:0;
+    overflow:hidden;
+    border-right:1px solid rgba(0,0,0,0.25);
+  }
+  .pad2 {
+    padding:20px;
+  }
+
+  .map {
+    position:absolute;
+    left:33.3333%;
+    width:66.6666%;
+    top:0;bottom:0;
+  }
+
+  h1 {
+    font-size:22px;
+    margin:0;
+    font-weight:400;
+    line-height: 20px;
+    padding: 20px 2px;
+  }
+
+  a {
+    color:#404040;
+    text-decoration:none;
+  }
+
+  a:hover {
+    color:#101010;
+  }
+
+  .heading {
+    background:#fff;
+    border-bottom:1px solid #eee;
+    min-height:60px;
+    line-height:60px;
+    padding:0 10px;
+    background-color: #f58220;
+    color: #fff;
+  }
+
+  .listings {
+    height:100%;
+    overflow:auto;
+    padding-bottom:60px;
+  }
+
+  .listings .item {
+    display:block;
+    border-bottom:1px solid #eee;
+    padding:10px;
+    text-decoration:none;
+  }
+
+  .listings .item:last-child { border-bottom:none; }
+  .listings .item .title {
+    display:block;
+    color:#f58220;
+    font-weight:700;
+  }
+
+  .listings .item .title small { font-weight:400; }
+  .listings .item.active .title,
+  .listings .item .title:hover { color:#8cc63f; }
+  .listings .item.active {
+    background-color:#f8f8f8;
+  }
+  ::-webkit-scrollbar {
+    width:3px;
+    height:3px;
+    border-left:0;
+    background:rgba(0,0,0,0.1);
+  }
+  ::-webkit-scrollbar-track {
+    background:none;
+  }
+  ::-webkit-scrollbar-thumb {
+    background:#f58220;
+    border-radius:0;
+  }
+
+  .marker {
+    border: none;
+    cursor: pointer;
+    height: 56px;
+    width: 56px;
+    background-image: url(  C:\Users\Julia\Downloads\white-circle-icon.png);
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .clearfix { display:block; }
+  .clearfix:after {
+    content:'.';
+    display:block;
+    height:0;
+    clear:both;
+    visibility:hidden;
+  }
+
+	</style>
 </head>
-
 <body>
-    <div class='flex-parent viewport-full relative scroll-hidden'>
-        <div class='flex-child w-full w360-ml absolute static-ml left bottom'>
-            <div class='flex-parent flex-parent--column viewport-third bg-white'>
-                <div class='flex-child flex-child--grow'>
-                    <div id="sidebarA"
-                        class="flex-parent flex-parent--column-ml flex-parent--center-main theme py12 px12 ">
-                        <h3 id='title' class='txt-l-ml txt-m txt-bold mb6 mr0-ml mr24 align-center block'>
-                        </h3>
-                        <p id='description' class='txt-s py12 none block-ml'>
-                        </p>
-                        <div class="flex-parent flex-parent--center-main relative-ml absolute right top mt0-ml mt6">
-                            <button id='filterResults' class='txt-bold btn btn--stroke mr0-ml mr12 px18-ml px6'>
-                                <svg class='icon inline-block align-middle h24 w24'>
-                                    <use xlink:href='#icon-filter' /></svg>
-                                <p class="inline-block-ml align-middle remove none">Show Filters</p>
-                            </button>
-                        </div>
-
-
-                    </div>
-                    <div id="listings" class="flex-child viewport-full py12 px12 listings scroll-auto"></div>
-
-                </div>
-            </div>
-        </div>
-        <div class='flex-child flex-child--grow w-auto viewport-full-ml viewport-twothirds' id='map'>
-
-        </div>
-
-        <div id='modal'
-            class='absolute top right bottom left scroll-auto hide-visually flex-parent flex-parent--center-main mt120-ml'>
-            <div class='pt36'>
-                <div class='flex-child bg-white round relative scroll-auto'>
-                    <button id='exitButton' class='absolute top right px12 py12'>
-                        <svg class='icon link color-darken50'>
-                            <use xlink:href='#icon-close'></use>
-                        </svg>
-                    </button>
-                    <div class='px24 py24'>
-                        <form id="filters"></form>
-                        <div class='align-center py12'></div>
-                        <div class="flex-parent flex-parent--center-main">
-                            <button id="removeFilters" class="btn">Reset Filters</button>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
+    <div class='sidebar'>
+      <div class='heading'>
+        <h1>Best Friends Action Teams </h1>
+      </div>
+      <div id='listings' class='listings'></div>
     </div>
-
-    </div>
-</body>
+		<div id='map' class='map'></div>
 
 <script>
+     mapboxgl.accessToken = 'pk.eyJ1IjoianVsaWFzb2JjemFrIiwiYSI6ImNrY2RtOXpkZDAwenUycG54eXlsYTFmcXkifQ.3hLkp5zWDu7IvZG_zsaKJQ';
+      /**
+       * Add the map to the page
+      */
+      var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/juliasobczak/ckdkd0g5r112i1imqc8zo7165',
+        center: [-98.556257, 39.808489],
+        zoom: 3.5,
+        scrollZoom: true
+      });
+
+      /**add team locations**/
+      var teams = {
+   "type": "FeatureCollection",
+   "features": [
+  {
+    "type": "Feature",
+    "geometry": {
+       "type": "Point",
+       "coordinates":  [-95.42010000, 29.79950009]
+    },
+    "properties": {
+      "Name":"Houston Action Team ",
+      "Facebook Group":"https://donate.sfmfoodbank.org/page/5009/donate/1",
+      "Email":"https://www.sfmfoodbank.org/volunteer/"
+    }
+  }]
+      };
+      geojson.features.array.forEach(function(marker){
+        var el = document.createElement('div');
+        el.className = 'marker';
+
+        new mapboxgl.marker(el)
+        .setLngLat(marker.geometry.coordinates)
+        .addTo(map);
+      });
+
+  
+
 
 </script>
-<script src="config.js"></script>
-<script src="app.js"></script>
-
+  </body>
 </html>
+
