--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
 
                             var popup = new mapboxgl.Popup({ closeOnClick: false })
                                 .setLngLat(currentFeature.geometry.coordinates)
-                                .setHTML('<h3>Sweetgreen</h3>' +
-                                    '<h4>' + currentFeature.properties.address + '</h4>')
+                                .setHTML('<h3>Contact Information</h3>' +
+                                    '<h4>' + Team_Name.Primary_Email + '</h4>')
                                 .addTo(map);
                         }
 
