--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             if (popups[0]) popups[0].remove();
                             const popup = new mapboxgl.Popup({ closeOnClick: true })
                                 .setLngLat(currentFeature.geometry.coordinates)
-                                .setHTML("<h3>" + Team_Name + "</h3>")
+                                .setHTML("<h3>" + 'Team_Name' + "</h3>")
                                 .addTo(map);
                         }
 
@@ -346,7 +346,7 @@
                             var popup = new mapboxgl.Popup({ closeOnClick: false })
                                 .setLngLat(Latitude.Longitude)
                                 .setHTML('<h3>Team_Name</h3>' +
-                                    '<h4>' + Team_Name.Primary_Email + '</h4>')
+                                    '<h4>' + 'Primary_Email' + '</h4>')
                                 .addTo(map);
                         }
 
