--- a/index.html
+++ b/index.html
@@ -250,9 +250,10 @@
                             'paint': {
                                 'circle-radius': 5,
                                 'circle-color': "orange"
-                            }
-                        })
-                    }
+                        }
+                     });
+                   
+                        buildLocationList(data);
 
                         function flyToLocation(currentFeature) {
                             map.flyTo({
@@ -267,8 +268,7 @@
                             if (popups[0]) popups[0].remove();
                             const popup = new mapboxgl.Popup({ closeOnClick: true })
                                 .setLngLat(currentFeature.geometry.coordinates)
-                                .setHTML("<h3>" + currentFeature.properties.TeamName + "</h3>"+
-            '<h4>'+ currentFeature.properties.City + currentFeature.properties.ST +'</h4>'))
+                                .setHTML("<h3>" + currentFeature.properties.TeamName + "</h3>")
                                 .addTo(map);
                         }
 
@@ -296,13 +296,13 @@
                                 link.href = '#';
                                 link.className = 'title';
                                 link.id = "link-" + prop.Notes;
-                                link.innerHTML = prop.TeamName;
+                                link.innerHTML = prop.City;
 
                                 /* Add details to the individual listing. */
                                 var details = listing.appendChild(document.createElement('div'));
                                 details.innerHTML = prop.city;
-                                if (prop.PrimaryEmail) {
-                                details.innerHTML += prop.PrimaryEmail;
+                                if (prop.phone) {
+                                    details.innerHTML += ' · ' + prop.phoneFormatted;
                         }
 
 
@@ -334,12 +334,27 @@
                                 });
                             });
                         }
+                        function createPopUp(currentFeature) {
+                            var popUps = document.getElementsByClassName('mapboxgl-popup');
+                            /** Check if there is already a popup on the map and if so, remove it */
+                            if (popUps[0]) popUps[0].remove();
+
+                            var popup = new mapboxgl.Popup({ closeOnClick: false })
+                                .setLngLat(currentFeature.geometry.coordinates)
+                                .setHTML('<h3>Sweetgreen</h3>' +
+                                    '<h4>' + currentFeature.properties.address + '</h4>')
+                                .addTo(map);
+                        }
+
 
                     });
 
                 });
             };
         });
+
+
+        
 
 
 
