--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset='utf-8' />
-    <title>Grassroots Locator</title>
+    <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
@@ -192,7 +192,7 @@
 <body>
     <div class='sidebar'>
         <div class='heading'>
-            <h1>Best Friends Action Teams</h1>
+            <h1>Grassroots Best Friends Action Teams</h1>
         </div>
         <div id='listings' class='listings'></div>
     </div>
