--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             center: [-99.140625,
                 39.90973623453719], // starting position
             zoom: 3,// starting zoom
+            scrollZoom: true,
             transformRequest: transformRequest
         });
 
