--- a/index.html
+++ b/index.html
@@ -219,6 +219,39 @@
             zoom: 3,// starting zoom
             transformRequest: transformRequest
         });
+        
+         $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                //YOUR TURN: Replace with csv export link
+                url: 'https://docs.google.com/spreadsheets/d/1CA49QC4xgZH6A8WnRbCMggisY4M-MbkM8tFwckQo9kw/gviz/tq?tqx=out:csv&sheet=Pawprints',
+                dataType: "text",
+                success: function (csvData) {makeGeoJSON(csvData);}
+            });
+ });
+
+
+            function makeGeoJSON(csvData) {
+                csv2geojson.csv2geojson(csvData, {
+                    latfield: 'Latitude',
+                    lonfield: 'Longitude',
+                    delimiter: ','
+                }, function (err, data) {
+                    map.on('load', function () {
+
+                        //Add the the layer to the map 
+                        map.addLayer({
+                            'id': 'csvData',
+                            'type': 'circle',
+                            'source': {
+                                'type': 'geojson',
+                                'data': data
+                            },
+                            'paint': {
+                                'circle-radius': 5,
+                                'circle-color': "orange"
+                        }
+                     });
 
       
     </script>
