--- a/index.html
+++ b/index.html
@@ -228,19 +228,19 @@
                 dataType: "text",
                 success: function (csvData) {makeGeoJSON(csvData);}
             });
- });
-
-                        //Add the the layer to the map 
-                        map.addLayer({
-                            'id': 'csvData',
-                            'type': 'circle',
-                            'source': {
-                                'type': 'geojson',
-                                'data': data
-                            },
-                            'paint': {
-                                'circle-radius': 5,
-                                'circle-color': "orange"
+         });
+        
+        //Add the the layer to the map 
+        map.addLayer({
+            'id': 'csvData',
+            'type': 'circle',
+            'source': {
+                'type': 'geojson',
+                'data': data
+            },
+            'paint': {
+                'circle-radius': 5,
+                'circle-color': "purple"
                         }
                      });
 
