--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -154,7 +153,7 @@
         }
 
         .mapboxgl-popup-content h3 {
-            background: #f58220;
+            background: #91c949;
             color: #fff;
             margin: 0;
             display: block;
@@ -184,118 +183,184 @@
         }
 
         .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
-            border-bottom-color: #f58220;
+            border-bottom-color: #91c949;
         }
     </style>
 </head>
-    
+
 <body>
+    <div class='sidebar'>
+        <div class='heading'>
+            <h1>Best Friends Action Teams</h1>
+        </div>
+        <div id='listings' class='listings'></div>
+    </div>
+    <div id='map' class='map'></div>
+    <script>
 
-  <div id='map'></div>
-  <script>
-
-    var transformRequest = (url, resourceType) => {
-      var isMapboxRequest =
-        url.slice(8, 22) === "api.mapbox.com" ||
-        url.slice(10, 26) === "tiles.mapbox.com";
-      return {
-        url: isMapboxRequest
-          ? url.replace("?", "?pluginName=sheetMapper&")
-          : url
-      };
-    };
-    //YOUR TURN: add your Mapbox token 
-    mapboxgl.accessToken = 'pk.eyJ1IjoianVsaWFzb2JjemFrIiwiYSI6ImNrY2RtOXpkZDAwenUycG54eXlsYTFmcXkifQ.3hLkp5zWDu7IvZG_zsaKJQ'; //Mapbox token 
-    var map = new mapboxgl.Map({
-      container: 'map', // container id
-      style: 'mapbox://styles/juliasobczak/ckd6fa77o03js1ik1s7upamu4', //stylesheet location
-      center: [-122.411464, 37.7852299], // starting position
-      zoom: 10,// starting zoom
-      transformRequest: transformRequest
-    });
-
-    $(document).ready(function () {
-      $.ajax({
-        type: "GET",
-        //YOUR TURN: Replace with csv export link
-        url: 'https://docs.google.com/spreadsheets/d/1wJtHsBoDY2DMr-rX0jqQzZlSOvj1a55xH8aCksW04Ig/gviz/tq?tqx=out:csv&sheet=Sheet',
-        dataType: "text",
-        success: function (csvData) { makeGeoJSON(csvData); }
-      });
-
-
-
-      function makeGeoJSON(csvData) {
-        csv2geojson.csv2geojson(csvData, {
-          latfield: 'Latitude',
-          lonfield: 'Longitude',
-          delimiter: ','
-        }, function (err, data) {
-          map.on('load', function () {
-
-            //Add the the layer to the map 
-            map.addLayer({
-              'id': 'csvData',
-              'type': 'circle',
-              'source': {
-                'type': 'geojson',
-                'data': data
-              },
-              'paint': {
-                'circle-radius': 5,
-                'circle-color': "purple"
-              }
-            });
-
-
-            // When a click event occurs on a feature in the csvData layer, open a popup at the
-            // location of the feature, with description HTML from its properties.
-            map.on('click', 'csvData', function (e) {
-              var coordinates = e.features[0].geometry.coordinates.slice();
-
-              //set popup text 
-              //You can adjust the values of the popup to match the headers of your CSV. 
-              // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV. 
-              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Address: ` + `</b>` + e.features[0].properties.Address + `</h4>` + `<h4>` + `<b>` + `Phone: ` + `</b>` + e.features[0].properties.Phone + `</h4>`;
-
-              // Ensure that if the map is zoomed out such that multiple
-              // copies of the feature are visible, the popup appears
-              // over the copy being pointed to.
-              while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-              }
-
-              //add Popup to map
-
-              new mapboxgl.Popup()
-                .setLngLat(coordinates)
-                .setHTML(description)
-                .addTo(map);
-            });
-
-            // Change the cursor to a pointer when the mouse is over the places layer.
-            map.on('mouseenter', 'csvData', function () {
-              map.getCanvas().style.cursor = 'pointer';
-            });
-
-            // Change it back to a pointer when it leaves.
-            map.on('mouseleave', 'places', function () {
-              map.getCanvas().style.cursor = '';
-            });
-
-            var bbox = turf.bbox(data);
-            map.fitBounds(bbox, { padding: 50 });
-
-          });
-
+        var transformRequest = (url, resourceType) => {
+            var isMapboxRequest =
+                url.slice(8, 22) === "api.mapbox.com" ||
+                url.slice(10, 26) === "tiles.mapbox.com";
+            return {
+                url: isMapboxRequest
+                    ? url.replace("?", "?pluginName=sheetMapper&")
+                    : url
+            };
+        };
+        //YOUR TURN: add your Mapbox token 
+        mapboxgl.accessToken = 'pk.eyJ1IjoianVsaWFzb2JjemFrIiwiYSI6ImNrY2RtOXpkZDAwenUycG54eXlsYTFmcXkifQ.3hLkp5zWDu7IvZG_zsaKJQ'; //Mapbox token 
+        var map = new mapboxgl.Map({
+            container: 'map', // container id
+            style: 'mapbox://styles/juliasobczak/ckd6fa77o03js1ik1s7upamu4', //stylesheet location
+            center: [-99.140625,
+                39.90973623453719], // starting position
+            zoom: 2,// starting zoom
+            transformRequest: transformRequest
         });
-      };
-    });
+
+        $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                //YOUR TURN: Replace with csv export link
+                url: 'https://docs.google.com/spreadsheets/d/1wJtHsBoDY2DMr-rX0jqQzZlSOvj1a55xH8aCksW04Ig/gviz/tq?tqx=out:csv&sheet=Sheet1',
+                dataType: "text",
+                success: function (csvData) { makeGeoJSON(csvData); }
+            });
+
+
+
+            function makeGeoJSON(csvData) {
+                csv2geojson.csv2geojson(csvData, {
+                    latfield: 'Latitude',
+                    lonfield: 'Longitude',
+                    delimiter: ','
+                }, function (err, data) {
+                    map.on('load', function () {
+
+                        //Add the the layer to the map 
+                        map.addLayer({
+                            'id': 'csvData',
+                            'type': 'circle',
+                            'source': {
+                                'type': 'geojson',
+                                'data': data
+                            },
+                            'paint': {
+                                'circle-radius': 5,
+                                'circle-color': "purple"
+                            }
+                        });
+
+
+                        buildLocationList(data);
+
+
+                        function flyToLocation(currentFeature) {
+                            map.flyTo({
+                                center: currentFeature,
+                                zoom: 15
+                            });
+                        }
+
+                        function createPopup(currentFeature) {
+                            const popups = document.getElementsByClassName("mapboxgl-popup");
+                            /** Check if there is already a popup on the map and if so, remove it */
+                            if (popups[0]) popups[0].remove();
+                            const popup = new mapboxgl.Popup({ closeOnClick: true })
+                                .setLngLat(currentFeature.geometry.coordinates)
+                                .setHTML("<h3>" + currentFeature.properties.City + "</h3>")
+                                .addTo(map);
+                        }
+
+                        /**
+                         * Add a listing for each store to the sidebar.
+                        **/
+                        function buildLocationList(data) {
+                            data.features.forEach(function (location, i) {
+                                /**
+                                 * Create a shortcut for `store.properties`,
+                                 * which will be used several times below.
+                                **/
+                                var prop = location.properties;
+
+                                /* Add a new listing section to the sidebar. */
+                                var listings = document.getElementById('listings');
+                                var listing = listings.appendChild(document.createElement('div'));
+                                /* Assign a unique `id` to the listing. */
+                                listing.id = "listing-" + prop.id;
+                                /* Assign the `item` class to each listing for styling. */
+                                listing.className = 'item';
+
+                                /* Add the link to the individual listing created above. */
+                                var link = listing.appendChild(document.createElement('a'));
+                                link.href = '#';
+                                link.className = 'title';
+                                link.id = "link-" + prop.Notes;
+                                link.innerHTML = prop.City;
+
+                                /* Add details to the individual listing. */
+                                var details = listing.appendChild(document.createElement('div'));
+                                details.innerHTML = prop.city;
+                                if (prop.phone) {
+                                    details.innerHTML += ' · ' + prop.phoneFormatted;
+                                }
+
+
+                                link.addEventListener('click', function (e) {
+                                    for (var i = 0; i < data.features.length; i++) {
+                                        if (this.id === "link-" + data.features[i].properties.id) {
+                                            var clickedListing = data.features[i];
+                                            flyToStore(clickedListing);
+                                            createPopUp(clickedListing);
+                                        }
+                                    }
+                                    var activeItem = document.getElementsByClassName('active');
+                                    if (activeItem[0]) {
+                                        activeItem[0].classList.remove('active');
+                                    }
+                                    this.parentNode.classList.add('active');
+                                });
+
+                                link.addEventListener('click', function (e) {
+                                    const clickedListing = location.geometry.coordinates;
+                                    flyToLocation(clickedListing, 11);
+                                    createPopup(location);;
+
+                                    var activeItem = document.getElementsByClassName('active');
+                                    if (activeItem[0]) {
+                                        activeItem[0].classList.remove('active');
+                                    }
+                                    this.parentNode.classList.add('active');
+                                });
+                            });
+                        }
+
+
+
+                        function createPopUp(currentFeature) {
+                            var popUps = document.getElementsByClassName('mapboxgl-popup');
+                            /** Check if there is already a popup on the map and if so, remove it */
+                            if (popUps[0]) popUps[0].remove();
+
+                            var popup = new mapboxgl.Popup({ closeOnClick: false })
+                                .setLngLat(currentFeature.geometry.coordinates)
+                                .setHTML('<h3>Sweetgreen</h3>' +
+                                    '<h4>' + currentFeature.properties.address + '</h4>')
+                                .addTo(map);
+                        }
+
+
+                    });
+
+                });
+            };
+        });
 
 
 
 
-  </script>
+    </script>
 
 </body>
 
